--- a/theme/index.scss
+++ b/theme/index.scss
@@ -17,3 +17,19 @@ html, body {
 .text-center {
   text-align: center;
 }
+
+.page-enter-active, .page-leave-active {
+  transition: opacity .15s;
+}
+
+.page-enter, .page-leave-active {
+  opacity: 0;
+}
+
+.mb {
+  margin-bottom: 1rem;
+}
+
+.mb2 {
+  margin-bottom: 2rem;
+}
